assignment three almost finish

--- a/index.html
+++ b/index.html
@@ -7,10 +7,161 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Football Assignment</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/942417e4d7.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <h1>hi</h1>
+    <!-- copa live matches -->
+    <header class="top-part">
+        <section class="copa-part">
+            <article class="live-part">
+                <h1 class="copa-title">Conmebol Copa America 2021</h1>
+                <a class="live-button" href="">Watch Live<i class="fas fa-arrow-right filled"></i></i></a>
+            </article>
+            <article class="live-part">
+                <img src="images/banner.png" alt="">
+            </article>
+        </section>
+    </header>
+    <!-- player -->
+    <main class="second-part">
+        <section class="players">
+            <div class="player">
+                <article class="about-player">
+                    <img src="images/players/player-1.png" alt="">
+                </article>
+                <article class="about-player">
+                    <h2>Neymar jr</h2>
+                    <p>Football, also called association football or soccer, is a game involving two teams of 11
+                        players. Overall football is a great game.</p>
+                </article>
+            </div>
+            <div class="player">
+                <article class="about-player">
+                    <img src="images/players/player-2.png" alt="">
+                </article>
+                <article class="about-player">
+                    <h2>Lionel Messi</h2>
+                    <p>Football, also called association football or soccer, is a game involving two teams of 11
+                        players. Overall football is a great game.</p>
+                </article>
+            </div>
+            <div class="player">
+                <article class="about-player">
+                    <img src="images/players/player-3.png" alt="">
+                </article>
+                <article class="about-player">
+                    <h2>Cristiano Ronaldo</h2>
+                    <p>Football, also called association football or soccer, is a game involving two teams of 11
+                        players. Overall football is a great game.</p>
+                </article>
+            </div>
+            <div class="player">
+                <article class="about-player">
+                    <img src="images/players/player-4.png" alt="">
+                </article>
+                <article class="about-player">
+                    <h2>Paulo Dybala</h2>
+                    <p>Football, also called association football or soccer, is a game involving two teams of 11
+                        players. Overall football is a great game.</p>
+                </article>
+            </div>
+            <div class="player">
+                <article class="about-player">
+                    <img src="images/players/player-5.png" alt="">
+                </article>
+                <article class="about-player">
+                    <h2>Mesut Ozil</h2>
+                    <p>Football, also called association football or soccer, is a game involving two teams of 11
+                        players. Overall football is a great game.</p>
+                </article>
+            </div>
+            <div class="player">
+                <article class="about-player">
+                    <img src="images/players/player-6.png" alt="">
+                </article>
+                <article class="about-player">
+                    <h2>Mauro Icardi</h2>
+                    <p>Football, also called association football or soccer, is a game involving two teams of 11
+                        players. Overall football is a great game.</p>
+                </article>
+            </div>
+            <div class="player">
+                <article class="about-player">
+                    <img src="images/players/player-7.png" alt="">
+                </article>
+                <article class="about-player">
+                    <h2>Di Maria</h2>
+                    <p>Football, also called association football or soccer, is a game involving two teams of 11
+                        players. Overall football is a great game.</p>
+                </article>
+            </div>
+            <div class="player">
+                <article class="about-player">
+                    <img src="images/players/player-8.png" alt="">
+                </article>
+                <article class="about-player">
+                    <h2>Kylian Mbappé
+                    </h2>
+                    <p>Football, also called association football or soccer, is a game involving two teams of 11
+                        players. Overall football is a great game.</p>
+                </article>
+            </div>
+            <div class="player">
+                <article class="about-player">
+                    <img src="images/players/player-9.png" alt="">
+                </article>
+                <article class="about-player">
+                    <h2>Mohamed Salah</h2>
+                    <p>Football, also called association football or soccer, is a game involving two teams of 11
+                        players. Overall football is a great game.</p>
+                </article>
+            </div>
+            <div class="player">
+                <article class="about-player">
+                    <img src="images/players/player-10.png" alt="">
+                </article>
+                <article class="about-player">
+                    <h2>Harry Kane</h2>
+                    <p>Football, also called association football or soccer, is a game involving two teams of 11
+                        players. Overall football is a great game.</p>
+                </article>
+            </div>
+            <div class="player">
+                <article class="about-player">
+                    <img src="images/players/player-11.png" alt="">
+                </article>
+                <article class="about-player">
+                    <h2>Kevin De Bruyne</h2>
+                    <p>Football, also called association football or soccer, is a game involving two teams of 11
+                        players. Overall football is a great game.</p>
+                </article>
+            </div>
+            <div class="player">
+                <article class="about-player">
+                    <img src="images/players/player-12.png" alt="">
+                </article>
+                <article class="about-player">
+                    <h2>Philippe Cautinho</h2>
+                    <p>Football, also called association football or soccer, is a game involving two teams of 11
+                        players. Overall football is a great game.</p>
+                </article>
+            </div>
+        </section>
+        <section class="cup-part">
+            <article class="live-part">
+                <h1 class="copa-cup-title">Copa Cup</h1>
+                <p>The Copa América is the world's oldest international football tournament. The event was first held in
+                    1916 in honour of the 100th anniversary of Argentina's independence—with Uruguay winning the
+                    inaugural title. It took place every one to four years before it adopted its current quadrennial
+                    format in 2007.</p>
+                <a class="live-button" href="">Cups<i class="fas fa-arrow-right filled"></i></i></a>
+            </article>
+            <article class="live-part">
+                <img src="images/copaCup.png" alt="">
+            </article>
+        </section>
+    </main>
 </body>
 
 </html>
