Only responsive part left

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </section>
     </header>
     <!-- player -->
-    <main class="second-part">
+    <main>
         <section class="players">
             <div class="player">
                 <article class="about-player">
@@ -148,6 +148,7 @@
                 </article>
             </div>
         </section>
+        <!-- copa cup -->
         <section class="cup-part">
             <article class="live-part">
                 <h1 class="copa-cup-title">Copa Cup</h1>
@@ -161,7 +162,39 @@
                 <img src="images/copaCup.png" alt="">
             </article>
         </section>
+        <!-- football part  -->
+        <section class="cup-part">
+            <article class="live-part">
+                <img src="images/playinng-football.jpg" alt="">
+            </article>
+            <article class="live-part">
+                <h1 class="copa-cup-title">Playing Football</h1>
+                <p id="about-football">Football, also called association football or soccer, is a game involving two
+                    teams of 11 players who
+                    try to maneuver the ball into the other team's goal without using their hands or arms. The team that
+                    scores more goals wins.</p>
+                <a class="live-button" href="">Footballs<i class="fas fa-arrow-right filled"></i></i></a>
+            </article>
+        </section>
     </main>
+    <footer>
+        <footer class="footer">
+            <div class="footer-items">
+                <div class="footer-item">
+                    <img src="./images/Logo.png" alt="">
+                </div>
+                <div class="footer-item">
+                    <a href=""><i class="social-icon fab fa-facebook"></i></a>
+                    <a href=""><i class="social-icon fas fa-globe"></i></a>
+                    <a href=""><i class="social-icon fab fa-twitter"></i></a>
+                    <a href=""><i class="social-icon fab fa-youtube"></i></a>
+                </div>
+                <div class="footer-item">
+                    <p>Copyright &copy 2022 Football</p>
+                </div>
+            </div>
+        </footer>
+    </footer>
 </body>
 
 </html>
