Finishing football assignment

--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
             </article>
         </section>
     </main>
+    <!-- last part -->
     <footer>
         <footer class="footer">
             <div class="footer-items">
